Update diagram labelling

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -670,6 +670,7 @@ Step 1. The user launches the application for the first time. The `[green]#Histo
 initialised with the initial `[green]#Athletick#`, `[green]#Attendance#` and
 `[green]#Performance#` state pushed to the respective stacks.
 
+.Initial stacks of states
 image::initialStack.png[width=450]
 
 Step 2. The user executes the `delete -p 3` command to delete the 3rd person in the `[green]#Athletick#` list. The
@@ -678,6 +679,7 @@ since the `delete -p 3` command only alters the `[green]#Athletick#` state, the 
 state will then be pushed to the `[green]#Athletick#` stack while the `[green]#Attendance#` and
 `[green]#Performance#` stacks are left untouched as their states remain the same.
 
+.Stacks of states after `delete -p 3` command
 image::afterUndoStack.png[width=450]
 
 Step 3. The user now decides that deleting the 3rd person in the list was a mistake, and decides to undo the action
@@ -687,6 +689,7 @@ stack and the latest `[green]#Athletick#` state from the `[green]#Athletick#` st
 It then peeks at the `[green]#Athletick#` stack to retrieve the `[green]#Athletick#` state
 before `delete -p 3` command was executed.
 
+.Stacks of states after `undo` command
 image::initialStack.png[width=450]
 
 Step 4. After retrieving the `[green]#Athletick#` state before `delete -p 3` command
@@ -695,8 +698,9 @@ was executed, we then resets the `[green]#Athletick#` state to this retrieved
 
 The following sequence diagram shows how the undo operation works:
 
+.Sequence diagram for undo implementation
 image::undoSQ.png[width=450]
-Sequence diagram for undo implementation
+
 
 ==== Redo Implementation
 
@@ -717,8 +721,8 @@ Implementation.]
 
 The activity diagram for `redo` command is as follows:
 
+.Activity diagram for `redo` command
 image::redoactivity.png[width=450]
-Activity diagram for `redo` command
 
 ==== Design Considerations
 This section describes the pros and cons of the current and other alternative implementations of the undo and redo features.
