--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -161,6 +161,8 @@ This section describes some details on how certain features are implemented.
 
 === Data Presentation: Categories
 ==== Implementation
+image::CategoryListClassDiagram[]
+
 For all entries in guiltTrip, the entries should always belong to one category.
 Creation of categories are also helpful for breakdown of statistics to be complete.
 The implementation of `Category` and `CategoryList` are largely similar to UniqueEntryList in
@@ -177,6 +179,9 @@ exist in the existing guiltTrip, hence the need for `CategoryList#contains(Categ
 * When deleting a `Category`, there is a need to check if there are any entries that have the `Category` as a field.
 
 Given below is an example of an activity diagram for editing a category to illustrate the point above.
+
+image::EditingCategory.png[]
+
 
 As the rest of the implementation is similar to AB3's CRUD, it won't be covered.
 
@@ -222,6 +227,7 @@ The `Model#sortFilteredExpenseList` creates an `EntryComparator` which takes in 
 Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("sortExpense typ/Amount s/ascending")` API call.
 
 .Interactions Inside the Logic Component for the `sortExpense typ/Amount s/ascending` Command
+
 image::SortSequence.png[]
 
 === Data Presentation: Find Command
@@ -235,23 +241,96 @@ For Example, the user can find by both `Amount` and `Description`. These are the
 * `EntryContainsTagsPredicate`: Will filter the list to include those with all the specified tags.
 * `EntryContainsDescriptionPredicate`: Will filter the list to include only those with descriptions that contain the keywords.
 
-=== Data Presentation: ViewPie/ViewTable Command
+=== Data Presentation: Statistics
 
-==== Implementation
+image::StatisticsClassDiagram.png[]
+
+The Statistics class diagram is shown above. Many of the operations are handled by StatisticsManager.
+The two main operations for calculation of Statistics are:
+
+* `StatisticsManager#updateListOfStats(rangeOfDates)`: Calculates the statistics for categories according to the range of dates specified.
+Calls on `MonthList#updateListOfStats(Category)` to calculate the list of Stats across Categories in that `MonthList`, thus updating the list of `Category Statistics`.
+* `StatisticsManager#updateBarChart(monthToCalculate)`: Calculates the daily statistics according to the month specified.
+Calls on `MonthList#CalculateStatisticsForBarChart()` which will call on `DailyList#CalculateStatisticsForBarChart()` to update the
+list of `DailyStatistics`.
+
+==== Implementation: (Statistics) - ViewPieChart/ViewTable Command
 
 The ViewPie and ViewTable commands are a unique case as they both depend on `CategoryStatistics`.
+StatisticsManager has two `ObservableList` of `CategoryStatistics`, one for Expense, `listOfStatsForExpense`
+and one for Income, `listOfStatsForIncome`.
+The `StatisticsPieChart`and `StatisticsTable` in guiltTrip listens to these two `ObservableList`, and will update accordingly. Hence all operations
+which involve calculation of category statistics needs to update this `ObservableList` by replacing its entries so as to
+update the relevant Pie Chart and Table in the Ui.
 
-. The user executes the command `viewHistory typ/Expense`
-.  `Logic` uses the `guiltTripParser` class to parse the user command.
-.  This results in a `viewHistoryCommand` object which is executed by the `LogicManager`.
-.  The `viewHistoryCommand` calls the `Model` 's generateHistory method which calls on the `StatisticsManager` generateHistory method to calculate the statistics for that type.
-.  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
+image::ViewPieActivityDiagram.png[]
+
+The overview of this process can be found in the Activity Diagram above.
+
+The details of the process is as below:
+
+. The user executes the command `viewPie p/2019-09,2019-11`
+.  `LogicManager` uses the `guiltTripParser` class to parse the user command.
+.  This results in a `viewPieChartCommand` object which is executed by the `LogicManager`.
+.  The `viewPieChartCommand` calls the `Model#updateListOfStats(RangeOfDates)` 's method which then calls `StatisticsManager#updateListOfStats(RangeOfDates)` method to calculate the statistics for that type.
+.  `StatisticsManager#updateListOfStats(RangeOfDates)` detects that the size of the list is 2 and calls `#getListOfMonths(RangeOfDates)` to retrieve the list of `MonthListToCalculate` from start Date to End Date from `yearlyRecord`, the `ObservableMap` inside `StatisticsManager`.
+.  `StatisticsManager#updateListOfStats(RangeOfDates)` then calls `countStats(MonthListToCalculate, listOfStatistics)`, which will calculate the list of statistics for
+expense and income categories and create many new `CategoryStatistics` objects to save the data of the calculated Statistics for each Category.
+.  `countStats(MonthListToCalculate, listOfStatistics)` will replace the all the `CategoryStatistics` objects in the `ObservableList` of `CategoryStatistics` with the newly calculated `CategoryStatistics` objects.
+.  As the `ObservableList` is updated, the PieChart and Table which uses this `ObservableList` is also updated, leading to them being updated.
+.  Finally, `countStats(MonthListToCalculate, listOfStatistics)` will set the new TotalExpense and TotalIncome values to the new values calculated, which will also update the Ui for Stats which displays the total expense and total income.
+.  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`
 .  `Logic` returns the `CommandResult` object.
 
-Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("viewHistory typ/Expense")` API call.
+Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("viewPie p/2019-09,2019-11")` API call.
 
-.Interactions Inside the Logic Component for the `viewHistory typ/Expense` Command
-image::viewHistorySequenceDiagram.png[]
+image::ViewPieChartSequenceDiagram.png[]
+
+.Interactions Inside the Logic Component for the `viewPie p/2019-09,2019-11` Command
+
+==== Implementation: (Statistics) - ViewBarChartCommand
+Similar to ViewPie and ViewTable, the `StatisticsBarChart` class listens to the `ObservableList` of `DailyStatistics` and will update
+according to changes in it. Hence all operations which involve calculation of daily statistics needs to update this `ObservableList` by replacing its entries so as to
+update the relevant Bar Chart in Ui.
+
+The details of the process is as below:
+
+. The user executes the command `viewBar p/2019-09`
+.  `LogicManager` uses the `guiltTripParser` class to parse the user command.
+.  This results in a `ViewBarChartCommand` object which is executed by the `LogicManager`
+.  The `ViewBarChartCommand` calls the `Model#updateBarChart(MonthToShow)` 's method which then calls `StatisticsManager#updateBarChart(monthToShow)` method to calculate the statistics for that period.
+.  `StatisticsManager#updateBarChart(MonthToShow)` retrieves the relavant MonthList from `ObservableMap`, yearlyRecord and calls `MonthList#calculateStatisticsForBarChart`.
+.  The called MonthList will then loop through all the DailyList in it and calls `DailyList#calculateStatisticsForBarChart`, retrieving the result and
+returning it to `StatisticsManager`.
+.  `StatisticsManager#updateBarChart(MonthToShow)` will replace the all the `DailyStatistics` objects in the `ObservableList` of `DailyStatistics` with the newly calculated `DailyStatistics` objects.
+.  As the `ObservableList` is updated, the BarChart which uses this `ObservableList` is also updated, leading to them being updated.
+.  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`
+.  `Logic` returns the `CommandResult` object.
+
+Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("viewBar p/2019-09")` API call.
+
+image::ViewBarChartSequenceDiagram.png[]
+
+==== Design Considerations: Statistics
+*Aspect: Calculation of Income and Expenses*
+
+* *Alternative 1*: Set a predicate on the filteredlist of income and filteredlist of expense to filter out the number of income and expenses which are within the time period of the statistics query.
+** Pros: Easy to implement.
+** Cons: May have performance issues in terms of runtime, as if multiple queries are carried out in a row which are the same, recalculation needs to be done every single time.
+* *Alternative 2(current choice)*: Have MonthList and DailyList classes which store the specific filteredlist of expenses for that month. This is a new filteredlist which observes the changes in the original list of expenses and is updated if a new expense is added which corresponds to the month.
+** Pros: Will be faster as initiating the expenses in the MonthList is only done at the start of the application. Any queries after that just refers to the already constructed MonthList. It is also structured as calculations of expenses now involve going to the related MonthList to carry out the calculations.
+** Cons: More complicated to implement.
+[NOTE]
+There isn’t a need to use YearList as most users will usually want to see their statistics breakdown over a period of a month rather than over a period of years.
+
+*Aspect: Updating of charts whenever add delete edit commands is called*
+
+* *Alternative 1*: Disallow non-stats commands in the stats window.
+** Pros: Easy to implement.
+** Cons: May not be intuitive for the user and creates hassle.
+* *Alternative 2(current choice)*: Adds a Listener to the list of filtered expenses. The listener will update the relevant charts whenever it detects that there is a change in the expenses or incomes.
+** Pros: Intuitive for the user.
+** Cons: Takes a toll on the time complexity if large bulks of data was added through AutoExpense.
 
 === Toggle Panel Command
 
